# futur3-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
futur3/: __init__.py  intraday_session.py  timeframe.py
futur3/contracts/: __init__.py  trading_calendar.py
futur3/cv/: __init__.py  block_bootstrap.py  cpcv.py  cscv.py  walkforward.py
futur3/data/: __init__.py  brr.py  continuous.py  cot_source.py  cot_types.py  intraday_continuous.py  macro_source.py  macro_types.py  source.py  term_structure.py  types.py  verifier.py  verifier_policies.py
futur3/data/sources/: __init__.py  backoff_queue.py  bls_macro.py  cftc.py  cme_eod.py  crypto.py  databento_hist.py  fred_macro.py  ibkr_historical.py  replay.py
futur3/engine/: __init__.py  backtest.py  portfolio_backtest.py
futur3/events/: __init__.py  severity.py
futur3/execution/: __init__.py  broker.py  decay_monitor.py  fixed_size_risk_manager.py  margin_source.py  paper_ledger.py  risk_manager.py  roll_executor.py  slippage.py  survival.py  vol_parity.py
futur3/execution/adapters/: __init__.py  ibkr_broker.py  mock_broker.py  prop_aware_mock_broker.py  topstepx_broker.py
futur3/runtime/: __init__.py  context.py
futur3/stats/: __init__.py  _multi_strategy.py  _sharpe_core.py  backtest_validation.py  bootstrap_ci.py  deflated_sharpe.py  multiple_testing.py  performance.py  permutation.py  probabilistic_sharpe.py  promotion_gate.py  reality_check.py  robustness.py  romano_wolf.py  spa_test.py  tail_risk.py
futur3/storage/: __init__.py  abcs.py  duckdb_query.py  parquet_settle_store.py  parquet_store.py
futur3/strategies/: __init__.py  base.py
futur3/tools/: __init__.py  verify_facts.py
research/: fomc_statement_dates.json
tests/: conftest.py  test_backoff_queue.py  test_block_bootstrap.py  test_bls_macro.py  test_bootstrap_ci.py  test_broaden_specs.py  test_broker.py  test_brr.py  test_cftc.py  test_cme_eod.py  test_continuous.py  test_cot_source.py  test_cot_types.py  test_cpcv.py  test_crypto.py  test_cscv.py  test_databento_hist.py  test_decay_monitor.py  test_deflated_sharpe.py  test_duckdb_query.py  test_event_severity.py  test_fixed_size_risk_manager.py  test_fomc_calendar.py  test_fred_macro.py  test_ibkr_broker.py  test_ibkr_historical.py  test_intraday_continuous.py  test_intraday_session.py  test_macro.py  test_margin_source.py  test_mock_broker.py  test_mock_broker_advance.py  test_multiple_testing.py  test_paper_ledger.py  test_parquet_settle_store.py  test_parquet_store.py  test_performance_metrics.py  test_permutation.py  test_pit_regression.py  test_probabilistic_sharpe.py  (+28 more)
tests/fixtures/cftc/: disaggregated_cl.json  disaggregated_cl_drift.json  tff_es.json
tests/fixtures/cme_eod/: INTEGRATION_SMOKE.md  README.md  cl_jul26_preliminary.html  empty_table.html  es_jun26_final.html  es_jun26_preliminary.html  es_schema_drift.html  es_with_placeholders.html  gc_aug26_preliminary.html  malformed_no_tbody.html  mbt_jun26_preliminary.html  met_jun26_preliminary.html  nq_jun26_preliminary.html  waf_block_cloudflare.html
tests/fixtures/ibkr/: INTEGRATION_SMOKE.md
